--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -56,10 +56,11 @@
 .button:hover {
   background: #fb8b24;
   background-clip: text;
--webkit-background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
   border: 3px solid #fb8b24;
   transition: all 400ms cubic-bezier(0.1, -0.6, 0.2, 0);
+  cursor: pointer;
 }
 
 @media (max-width: 720px) {
