--- a/src/styles/bet.module.css
+++ b/src/styles/bet.module.css
@@ -5,9 +5,10 @@
 .numbers-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   text-align: center;
+  max-width: 100vw;
 }
 
 .bet-number {
@@ -18,7 +19,6 @@
   width: 3rem;
   height: 3rem;
   padding: 1rem;
-  margin: 0 0.5rem 0 0.5rem;
   border-radius: 50%;
   background-color: lightgray;
 }
